@@ -1,3 +1,7 @@
+2019-07-02
+- Add ipfix element #150, #151 unix time start/end
+- Fix display bug raw record
+
 2019-06-01
 - Add ipfix dyn element handling.
 - Add empty m4 directory - keep autoconf happy
